--- a/src/view/main.pug
+++ b/src/view/main.pug
@@ -1,12 +1,14 @@
+
+//- ORIGIN FROM INDEX.HTML
 html
   head
     meta(charset='utf-8')
     title= title
-    link(rel='stylesheet', href='/static/css/app.css')
+    link(rel='stylesheet', href='/static/styles/styles.css')
   body
     div.center
       h1= subtitle
-      p The LinkedIn API is organized around #[strong REST]. Our API has predictable, resource-oriented URLs, and uses HTTP response codes to indicate API errors. We support #[strong cross-origin-resource-sharing], allowing you to interact securely with our API from a client-side web application. #[strong JSON] is returned by all API responses, including errors.
+      p The Eat Healthy API is organized around #[strong REST]. Our API has predictable, resource-oriented URLs, and uses HTTP response codes to indicate API errors. We support #[strong cross-origin-resource-sharing], allowing you to interact securely with our API from a client-side web application. #[strong JSON] is returned by all API responses, including errors.
       hr
       pre
-        code curl http://localhost:3001/api
+        code curl http://localhost:3000/apieh
