--- a/src/view/main.pug
+++ b/src/view/main.pug
@@ -11,4 +11,4 @@ html
       p The Eat Healthy API is organized around #[strong REST]. Our API has predictable, resource-oriented URLs, and uses HTTP response codes to indicate API errors. We support #[strong cross-origin-resource-sharing], allowing you to interact securely with our API from a client-side web application. #[strong JSON] is returned by all API responses, including errors.
       hr
       pre
-        code curl http://localhost:3000/apieh
+        code curl http://localhost:3001/api
