--- a/src/view/main.pug
+++ b/src/view/main.pug
@@ -1,14 +1,7 @@
-
 html
-  head
-    meta(charset='utf-8')
-    title= title
-    link(rel='stylesheet', type='text/css', href='/static/css/app.css')
-    
-  body
-    div.center
-      h1= subtitle
-      p The LinkedIn API is organized around #[strong REST]. Our API has predictable, resource-oriented URLs, and uses HTTP response codes to indicate API errors. We support #[strong cross-origin-resource-sharing], allowing you to interact securely with our API from a client-side web application. #[strong JSON] is returned by all API responses, including errors.
-      hr
-      pre
-        code curl https://backendlefts.herokuapp.com/api
+	head
+		title PI
+		
+	body
+		div.center
+			
